syntax = "proto2";

option java_package = "com.newland.tianya.commons.base.model.proto";

message BackendAppPageMessage {
    required string log_id = 1;
    optional int32 count = 2 [default = 0];
    message BackendAppTableMessage {
        optional string app_name = 1;
        optional uint64 app_id = 2;
        optional string api_key = 3;
        optional string secret_key = 4;
        optional string create_time = 5;
        optional uint32 type = 6;
        optional string api_list = 7;
        optional string app_info = 8;
    }
    repeated BackendAppTableMessage result = 3;
}

message BackendFacesetPageMessage {
    required string log_id = 1;
    optional uint32 count = 2 [default = 0];
    optional string face_id = 4;
    message BackendFacesetTableMessage {
         optional string app_name = 1;
         optional uint64 app_id = 2;
         optional string create_time = 3;
         optional uint32 group_number = 4;
         optional string group_id = 5;
         optional string modify_time = 6;
         optional uint32 user_number = 7;
         optional uint32 face_number = 8;
         optional string user_id = 9;
         optional string user_info = 10;
         optional string face_id = 16;
         optional string image = 17;
         optional float distance = 18;
    }
    repeated BackendFacesetTableMessage result = 3;
}